--- a/www/views/admin/event_add.html
+++ b/www/views/admin/event_add.html
@@ -10,14 +10,15 @@
 </ons-toolbar>
 <div>
 <br>
+<!--
     <div style="text-align:center;">
         <div id="output"><ons-icon icon="fa-camera" size="3x"></ons-icon></div>
         <label for="file-data">
         写真を追加する
         </label>
-        <!--<input type="file" id="file-data" style="display: none;"/>-->
+        <input type="file" id="file-data" style="display: none;"/>
     </div>
-<br>
+<br>-->
 <ons-row>
    <ons-col width="40%"> <span class="event_com">担当部名</span> </ons-col>
    <ons-col>
@@ -42,7 +43,7 @@
     <ons-row>
 
         <ons-col width="40%"><span class="event_com">イベント名</span></ons-col>
-        <ons-col><input class="text-input; break_point" type="text" placeholder="イベント名" id="event_name" size="20%" /></ons-col>
+        <ons-col><input class="text-input; break_point" type="text" placeholder="イベント名" id="event_name" size="13%" /></ons-col>
     </ons-row>
 
 
@@ -59,7 +60,7 @@
     <HR>
     <ons-row>
         <ons-col width="40%"> <span class="event_com">場所</span> </ons-col>
-        <ons-col> <input class="text-input; break_point" type="text" placeholder="開催場所" id="location" size="20%" /></ons-col>
+        <ons-col> <input class="text-input; break_point" type="text" placeholder="開催場所" id="location" size="10%" /></ons-col>
     </ons-row>
 
 
@@ -83,7 +84,7 @@
     <HR>
     <ons-row>
         <ons-col width="40%"> <span class="event_com">定員</span> </ons-col>
-        <ons-col> <input class="text-input; break_point" type="text" placeholder="人数" id="capacity" size="20%" /></ons-col>
+        <ons-col> <input class="text-input; break_point" type="text" placeholder="人数" id="capacity" size="10%" /></ons-col>
     </ons-row>
 
 
