--- a/www/views/admin/admin_config.html
+++ b/www/views/admin/admin_config.html
@@ -4,7 +4,7 @@
 <ons-page>
   <ons-toolbar>
     <div class="left">
-      <ons-back-button> </ons-back-button>
+      <ons-back-button> 戻る </ons-back-button>
     </div>
     <div class="center">設定</div>
   </ons-toolbar>
@@ -12,17 +12,17 @@
   <ons-list>
     <ons-list-item modifier="tappable" onclick="window.open('views/admin/policy_admin.html','_blank','toolbarposition=top,suppressesIncrementalRendering=yes,closebuttoncaption=戻る,enableViewportScale=yes');">
       <div class="break_point_config">
-        ヘルプ
+        管理者用じぷり利用規約
       </div>
       <ons-row>
         <div class="break_point_config2">
-          じぷりの取り扱い説明書が見れます。
+          管理者用のじぷりの利用規約をかくにんすることができます。
         </div>
       </ons-row>
     </ons-list-item>
 
-    <ons-list-item modifier="tappable">
-      <div class="reset" onclick="clearStorage();">
+    <ons-list-item modifier="chevron" tappable onclick="clearStorage();">
+      <div class="reset">
         <div class="break_point_config">
           入力情報のリセット
         </div>
