--- a/www/views/normal/normal_config.html
+++ b/www/views/normal/normal_config.html
@@ -5,13 +5,13 @@
 <ons-page>
   <ons-toolbar>
     <div class="left">
-      <ons-back-button> </ons-back-button>
+      <ons-back-button> 戻る </ons-back-button>
     </div>
     <div class="center">設定</div>
   </ons-toolbar>
 
   <ons-list>
-    <ons-list-item modifier="chevron" tappable onclick="viewManual('normal')">
+    <!--<ons-list-item modifier="chevron" tappable onclick="viewManual('normal')">
       <div class="break_point_config">
         ヘルプ
       </div>
@@ -20,10 +20,10 @@
           じぷりの取り扱い説明書が見れます。
         </div>
       </ons-row>
-    </ons-list-item>
+    </ons-list-item>-->
 
-    <ons-list-item modifier="chevron" tappable>
-      <div class="reset" onclick="clearStorage();">
+    <ons-list-item modifier="chevron" tappable onclick="clearStorage();">
+      <div class="reset">
         <div class="break_point_config">
           入力情報のリセット
         </div>
