--- a/www/views/officer/officer_config.html
+++ b/www/views/officer/officer_config.html
@@ -4,7 +4,7 @@
 <ons-page>
   <ons-toolbar>
     <div class="left">
-      <ons-back-button> </ons-back-button>
+      <ons-back-button> 戻る </ons-back-button>
     </div>
     <div class="center">設定</div>
   </ons-toolbar>
@@ -21,8 +21,8 @@
       </ons-row>
     </ons-list-item> -->
 
-    <ons-list-item modifier="chevron" tappable>
-      <div class="reset" onclick="clearStorage();">
+    <ons-list-item modifier="chevron" tappable onclick="clearStorage();">
+      <div class="reset">
         <div class="break_point_config">
           入力情報のリセット
         </div>
